# intro-to-MLOPS

intro-to-mlops/: README.md  pyproject.toml
intro-to-mlops/notebooks/: checking-personal-kernel.ipynb
