[tool.poetry]
name = "intro-to-mlops"
version = "0.1.0"
description = ""
authors = ["Leonardo Galler <leonardo.galler@l2-analytics.com>"]
readme = "README.md"
packages = [{include = "intro_to_mlops", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.61.0"
jupyter = "^1.1.1"
notebook = "^7.4.5"
cookiecutter = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
